--- a/demo/wave2.html
+++ b/demo/wave2.html
@@ -11,7 +11,7 @@
             height: 100vh;
         }
     </style>
-    <script src="waterWave.js"></script>
+    <script src="../src/waterWave.js"></script>
 </head>
 <body>
 </body>
