refacture the api

--- a/demo/wave2.html
+++ b/demo/wave2.html
@@ -14,5 +14,12 @@
     <script src="../src/waterWave.js"></script>
 </head>
 <body>
+
+    <script>
+        const wave = new Wave();
+        document.querySelector("body").onclick = (e)=>wave.render(e);
+        
+    </script>
+    
 </body>
 </html>
